# micpipe

./: .gitignore  LICENSE  MicPipe.command  README.md  README.zh-CN.md  chrome_script.py  clipboard.py  clipboard_guard.py  config.py  generate_assets.py  hotkey.py  main.py  micpipe.py  paste_tool.py  pyproject.toml  run.sh  slot_editor.py  state_manager.py  test_gemini_selector.py  test_gemini_simple.py  test_window_id.py
.agent/skills/voice_changer/: SKILL.md
.agent/skills/voice_changer/scripts/: voice_change.sh
MicPipe.app/Contents/: Info.plist
MicPipe.app/Contents/MacOS/: applet
MicPipe.app/Contents/Resources/Scripts/: main.scpt
MicPipe.app/Contents/_CodeSignature/: CodeResources
plans/: clipboard-recovery.md
