[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micpipe"
version = "1.4.2"
description = "Voice-to-text utility for ChatGPT using global hotkeys"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynput>=1.8.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyperclip>=1.11.0",
    "rumps>=0.4.0",
]

[project.scripts]
micpipe = "main:main"

[project.optional-dependencies]
dev = ["py2app>=0.28.8"]

[tool.setuptools]
py-modules = ["main", "chrome_script", "clipboard_guard", "paste_tool", "slot_editor", "state_manager"]
